@@ -8,6 +8,7 @@ Default to build 19041 if 19043 doesn't exist (as 19041 is found to work better 
 Issue #1944 Extract-AppFileToFolder doesn't handle special characters in manifest correctly
 Issue #1933 Run-ALValidation fails sometimes with single installApps and multiple apps specified
 Issue #1931 Throw understandable error when trying to create a pre-15 filesonly container
+Issue #1921 Add /GenerateCrossReferences switch from alc.exe to Compile-AppInBcContainer and Run-AlPipeline
 
 2.0.12
 Issue #1894 Error when creating a new "clean" v18 container
